src/Components/DetailedView/Actor/Actor.module.css
.header {
  margin: auto;
  display: flex;
  justify-content: center;
  width: 100vw;
  max-width: 1000px;
  padding-top: 8px;
  padding-bottom: 16px;
  box-sizing: border-box;
}

.poster {
  width: 300px;
  align-self: center;
}

.text {
  padding: 0 16px;
}

.name {
  margin: 0;
}

.name,
.info,
.bio {
  color: var(--text);
}

.info span:first-of-type:before {
  content: '';
  padding: 0px;
}

.info span::before {
  content: '\25E6';
  padding: 8px;
}

.bio {
  display: flex;
  flex-direction: column;
  white-space: pre-line;
  padding-left: 0;
}

.bio p {
  margin-bottom: 0;
}

.bio button {
  align-self: flex-end;
  border: none;
  padding: 6px 12px;
  font-size: 14px;
  background-color: transparent;
  margin: 0;
  cursor: pointer;
  color: #00cfff;
}

.loading {
  text-align: center;
}

.loading p {
  color: var(--text);
}

.error {
  text-align: center;
  color: var(--text);
}

@media (max-width: 735px) {
  .header {
    flex-direction: column;
  }

  .name {
    margin-top: 8px;
  }

  .info {
    display: flex;
    flex-direction: column;
  }

  .info span:first-of-type:before {
    content: '\25E6';
    padding: 8px;
  }
}

